--- a/themes/parsa-hugo/layouts/partials/header.html
+++ b/themes/parsa-hugo/layouts/partials/header.html
@@ -4,8 +4,9 @@
 
 
 
-    <a class="navbar-brand" href="{{site.BaseURL}}"><img class="img-fluid logo" src="{{ site.Params.logo | absURL }}" alt="{{site.Title}}"></a><h2>{{site.Title}}</h2>
-    <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
+    <a class="navbar-brand" href="{{site.BaseURL}}"><img class="img-fluid logo" src="{{ site.Params.logo | absURL }}" alt="{{site.Title}}"></a>
+    <h3>{{site.Title}}</h3>
+    <button class="menu navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navogation"
       aria-controls="navogation" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
