--- a/themes/parsa-hugo/assets/css/style.css
+++ b/themes/parsa-hugo/assets/css/style.css
@@ -881,3 +881,11 @@ blockquote {
     top: 5px;
   }
 }
+.entry {
+  height: 400px;
+  object-fit: cover;
+}
+@media (max-width: 767px) {
+  .entry {
+  }
+}
