--- a/themes/parsa-hugo/layouts/_default/single.html
+++ b/themes/parsa-hugo/layouts/_default/single.html
@@ -7,8 +7,10 @@
 <section class="section bg-secondary">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-6">
         <h4>{{ .Title }}</h4>
+      </div>
+      <div class="col-lg-6">
       </div>
     </div>
   </div>
@@ -22,11 +24,14 @@
       <div class="col-lg-8">
         <ul class="list-inline d-flex justify-content-between py-3">
           <li class="list-inline-item"><i class="ti-user mr-2"></i>Post by {{site.Params.author}}</li>
-          <li class="list-inline-item"><i class="ti-calendar mr-2"></i>{{ .PublishDate.Format "Jan 02, 2006" }}</li>
+          <li class="list-inline-item"><i class="ti-calendar mr-2"></i>{{ .PublishDate.Format "02 Jan 2006" }}</li>
         </ul>
         <article class="content">
-          <img src="{{.Params.Image | absURL }}" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4">
+          <img src="{{.Params.Image | absURL }}" alt="post-thumb" class="img-fluid rounded float-left mr-5 mb-4 blog-post-image">
           {{.Content}}
+          <div class="map">
+            {{ partial "map-container.html" . }}
+          </div>
         </article>
       </div>
       {{partial "sidebar.html" . }}
